--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/catalog.css">
 
     <% if (NODE_ENV && NODE_ENV.includes('dev')) { %>
         <script>
@@ -27,6 +28,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/products">Products</a></li>
+                <li><a href="/catalog">Course Catalog</a></li>
             </ul>
         </nav>
     </header>
