--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -21,7 +21,7 @@
         </script>
     <% } %>
 </head>
-<body>
+<body class="<%= bodyClass %>">
     <header>
         <nav>
             <ul>
@@ -29,6 +29,9 @@
                 <li><a href="/about">About</a></li>
                 <li><a href="/products">Products</a></li>
                 <li><a href="/catalog">Course Catalog</a></li>
+                <li><a href="/demo">Middleware Demo</a></li>
             </ul>
         </nav>
+
+        <%- greeting %>
     </header>
